Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62200

[Reg 5.8 - 5.9][Windows] Assert in web_event_factory when application has a style sheet with sub-control hover defined

    XMLWordPrintable

Details

    Description

      When the application has a style sheet with QWidget::item:hover and a QWebEngineView, following assert happens in web_event_factory.cpp in webEventTypeForEvent() when you hover over QWebEngineView:
      ASSERT: "false" in file c:\users\qt\work\qt\qtwebengine\src\core\web_event_factory.cpp, line 1177

      It seems that HoverEnter event causes the assert. Interestingly those events don't cause any trouble in Qt 5.8 or in macOS where this problem is not reproducible. Thus it seems that those events never go through webEventTypeForEvent() function on macOS or in Qt 5.8 while they do on Windows in Qt 5.9.

      As this is an assert, it happens only in debug mode and there are no known consequences in release mode.

      The attached example can be used to reproduce. Just run it in debug and hover over the app.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            juri.valdmann Jüri Valdmann (Inactive)
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes